# liteagent

./: .env.example  .gitignore  0001-Add-read-log-line-range-tool.patch  BUG.md  CLI-WRAPPERS-FOR-AGENTS.md  INSIGHT_TEST_PLAN.md  INSIGHT_USAGE.md  KB_VS_INDEXING_ANALYSIS.md  MCP-USAGE.md  README.md  SEARCH_CODE_IMPROVEMENT_PLAN.md  SEARCH_LOGS_IMPROVEMENT_PLAN.md  SEMANTIC_SEARCH.md  SETUP.md  SUMMARIZER_PLAN.md  log_updating_plan.md  mcp_servers.json.example  pyproject.toml  tool_examples.md
PLAN/: CODE-REVIEW-GRAPH-TOOLS-PLAN.md  KNOWLEDGE-BASE-INTEGRATION-PLAN.md
PLAN/IMPLEMENTED/: markdown-rendering.md
Unit Tests/: get_log_stats_test.py  get_project_map_test.py  search_code_test.py  search_logs_test.py  trace_calls_test.py  trace_log_to_code_test.py
docs/: CHANGING_EMBED_MODELS.md  CHUNKING_STRATEGY_NOW.md  EMBEDDING_BENCHMARK_PLAN.md  EMBEDDING_UPGRADE_FUTURE.md  GET_LOG_STATS.md  GET_PROJECT_MAP.md  SEARCH_CODE.md  SEARCH_LOG.md  TRACE_CALLS.md  TRACE_LOG_TO_CODE.md
plan/: insight-agent.md
src/liteagent/: __init__.py
src/liteagent/cli/: formatter.py  main.py  markdown_renderer.py  server.py
src/liteagent/core/: config.py  container.py  logger.py  read_tracker.py  session.py  state.py  summarizer.py
src/liteagent/graph/: builder.py
src/liteagent/insight/: __init__.py  agent.py  providers.py
src/liteagent/knowledge/: __init__.py  context_manager.py  hash_checker.py  loader.py  manager.py
src/liteagent/providers/: __init__.py  base.py  factory.py  nvidia_nim.py  ollama.py  openrouter.py
src/liteagent/tools/: __init__.py  delete_path_tool.py  (+21 more)
(+9 files in other folders)
