[project]
name = "liteagent"
version = "0.1.0"
description = "A lightweight, extensible coding agent CLI using LangGraph."
authors = [{ name = "Hridoy", email = "hridoy@example.com" }]
dependencies = [
    "typer[all]",
    "langgraph",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "rich",
    "python-dotenv",
]
requires-python = ">=3.10"

[project.scripts]
liteagent = "liteagent.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
