[project]
name = "liteagent"
version = "0.1.0"
description = "A lightweight, extensible coding agent CLI using LangGraph."
authors = [{ name = "Hridoy", email = "hridoy@example.com" }]
dependencies = [
    "typer[all]",
    "langgraph",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "rich",
    "mistune",
    "python-dotenv",
    "prompt_toolkit",
    "tenacity",
    "fastapi",
    "uvicorn",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.24.0",
    "tree-sitter-languages>=1.10.0",
    "chromadb>=1.0.0",
    "rank-bm25>=0.2.2",
    "pathspec>=0.12.0",
    "watchdog>=4.0.0",
    "google-genai>=1.0.0",
    "sentence-transformers>=2.2.2",
    "rapidfuzz>=3.0.0",
]
requires-python = ">=3.10"

[project.scripts]
liteagent = "liteagent.cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
